UI mapped with service